name:                advent2016
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/advent2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Day1
                     , Day2
                     , Day3
                     , Day4
                     , Day5
                     , Day6
                     , Day7
                     , Day8
                     , Day9
                     , Day10
                     , Day11
  build-depends:       base >= 4.7 && < 5
                     , array
                     , cryptonite
                     , bytestring
                     , containers
                     , split
                     , vector
                     , repa
                     , megaparsec
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/githubuser/advent2016
